[package]
name = "lockbox-aes-wasm"
version = "0.1.0"
authors = ["Rik de Goede <rik.dgd@gmail.com>"]
description = "A simple WebAssembly package to encrypt files using AES-GCM."
license = "MIT"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
aes-gcm = "0.10"
sha2 = "0.10"
pbkdf2 = "0.12"

getrandom = { version = "0.2.16", features = ["js"]}